fix: ant table content scrollbar

--- a/src/components/FileUploadTable/index.less
+++ b/src/components/FileUploadTable/index.less
@@ -17,13 +17,14 @@
   .content {
     flex: 1 0 0;
     display: flex;
-
+    
     .table {
       width: 100%;
       height: 100%;
-      overflow-x: auto;
-
-      &:extend(.scrollbar all);
+      
+      :global(.ant-table-content) {
+        &:extend(.scrollbar all);
+      }
     }
   }
 
